Fix error endpoint program, kegiatan, sub kegiatan